--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ body {
 	appearance: none;
 	width: 100%;
 	height: 30px;
-	outline: none; 
+	outline: none;
 	opacity: 0.7;
 	-webkit-transition: .2s;
 	transition: opacity .2s;
@@ -117,4 +117,26 @@ body {
 
 #fees .total {
 	font-size: 100px;
+}
+
+#allcoinsFormIDHere ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+#allcoinsFormIDHere li {
+  display: inline-block;
+}
+
+#allcoinsFormIDHere img {
+  width: 45px;
+  height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#allcoinsFormIDHere figcaption {
+  text-align: center;
 }
