--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,7 @@ body {
   display: inline-block;
 }
 
-#allcoinsFormIDHere img {
+#allcoinsFormIDHere img12 {
   width: 45px;
   height: auto;
   display: block;
